--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/logo.png" />
+
+    <!-- Plus Jakarta Sans (UI font) -->
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
+<link href="https://fonts.googleapis.com/css2?
+family=Plus+Jakarta+Sans:wght@400;500;600;700&
+family=JetBrains+Mono:wght@400;500&
+display=swap" rel="stylesheet">
+
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smart Fish Feeder</title>
   </head>
